Project

General

Profile

Actions

Bug #19287

closed

[api] is_exclusive_lock_owner doesn't detect that is has been blacklisted

Added by Jason Dillaman about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the exclusive lock is stolen by another client which resulted in the blacklisting of the current client, this helper method should return -ESHUTDOWN (-EBLACKLISTED internally) instead of 0.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #19467: kraken: [api] is_exclusive_lock_owner doesn't detect that is has been blacklistedResolvedJason DillamanActions
Copied to rbd - Backport #19468: jewel: [api] is_exclusive_lock_owner doesn't detect that is has been blacklistedResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman about 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19467: kraken: [api] is_exclusive_lock_owner doesn't detect that is has been blacklisted added
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19468: jewel: [api] is_exclusive_lock_owner doesn't detect that is has been blacklisted added
Actions #5

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF