librbd: is_exclusive_lock_owner API should ping OSD

This is required to detect if a peer has been silently blacklisted
and is therefore no longer the lock owner.

Fixes: http://tracker.ceph.com/issues/19287
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit e15db05960a284bdf3701256722299d553cfd5aa)

Conflicts:
	src/librbd/ManagedLock.[h|cc]: logic moved to ExclusiveLock

(cherry picked from commit 7e30b630e2806c73ea503871599f958b58df7934)